...
  const [password, setPassword] = useState('');

  const handleLogin = async () => {
    try {
      const user = await authenticateUser(email, password);
      if (user) onLogin();
      else Alert.alert('Erro', 'Credenciais inválidas. Tente novamente.');
    } catch (error) {
      console.error('Erro ao autenticar:', error);
      Alert.alert('Erro', 'Ocorreu um erro ao tentar fazer login.');
    }
  };

...
        style={styles.input}
        placeholder="Email"
        value={email}
        onChangeText={setEmail}
        keyboardType="email-address"
        autoCapitalize="none"
        testID="emailInput"
      />
      <TextInput
        style={styles.input}
        placeholder="Senha"
        value={password}
        onChangeText={setPassword}
        secureTextEntry
        testID="passwordInput"
      />
      <TouchableOpacity onPress={handleLogin} style={[styles.button, { marginTop: 20 }]} testID="loginButton">
        <Text style={styles.buttonText}>Entrar</Text>
      </TouchableOpacity>
      <TouchableOpacity onPress={onNavigateToRegister} testID="navigateToRegisterButton">
        <Text style={{ marginTop: 20, color: 'blue' }}>Não tem uma conta? Cadastre-se!</Text>
      </TouchableOpacity>
    </View>
  );
}

...
