...
    setExercises(data);
  };

  useEffect(() => { load(); }, []);

  return (
    <View style={styles.container} testID="exercisesScreen">
      <View style={styles.flexJustifyBetween}>
        <Image source={logo} style={styles.logo} />
        <Icon testID="iconeSino" name="bell" size={30} color="#E67E22" onPress={() => { setEditing(null); setModalReminder(true); }} />
      </View>      
      <Text style={styles.header} testID="headerText">Exercícios</Text>

...
            <Text style={styles.cardTitle} testID={`exerciseName-${item.id}`}>{item.name}</Text>
            <Text style={styles.cardSubtitle} testID={`exerciseMuscleGroup-${item.id}`}>
              {portuguesMuscleGroup[item.muscle_group]}
            </Text>
          </TouchableOpacity>
        )}
        testID="exerciseList"
      />

      <TouchableOpacity
        style={styles.addButton}
        onPress={() => { setEditing(null); setModalVisible(true); }}
        testID="plusButton"
...
