...
            tabBarIconStyle: { display: 'none' },
            tabBarItemStyle: { flex: 1 },
            headerShown: false,
          }}
        >
          <Tab.Screen name="Inicio" component={DashboardScreen} />
          <Tab.Screen name="Exercicios" component={ExercisesScreen} />
          <Tab.Screen name="Treinos" component={TrainingSessionScreen} />
          <Tab.Screen name="Historico" component={TrainingHistoryScreen} />
        </Tab.Navigator>
      ) : isRegistering ? (
        <RegisterScreen onRegister={() => setIsRegistering(false)} />
      ) : (
...
